--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
 </head>
 <body>
   
-    
+    <div class="timer">
+        <p id="second">10</p>
+    </div>
+    <h1 id="message"></h1>
 
     <script src="./js/fuction.js"></script>
     <script src="./js/script.js"></script>
