add: script conutdown

--- a/index.html
+++ b/index.html
@@ -7,12 +7,13 @@
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
-  
+    <div class="wrapper">
+    <button id="avvio">Avvia il CountDown</button>
     <div class="timer">
         <p id="second">10</p>
+        <h1 id="message">AUGURI! BUON ANNO NUOVO</h1>
     </div>
-    <h1 id="message"></h1>
-
+</div>
     <script src="./js/fuction.js"></script>
     <script src="./js/script.js"></script>
 </body>
